# rninja2compdb

./: Cargo.toml  README.md
src/: main.rs
