[package]
name = "rninja2compdb"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shlex = "1.3.0"
